--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </main>
     <footer>
         <b>Adelaide Hills Urbanism, 2023</b><br>
-        <a href="github.com">Github</a><text>   </text><a href="mailto:youremail@example.com">Contact</a><text>   </text><a href="javascript:void(0);" onclick="alert('Each article\'s copyright belongs to its respective author. For more information, contact Adelaide Hills Urbanism or the article\'s author.');">Copyright Information</a><br>
+        <a href="github.com">Github</a><text>   </text><a href="mailto:email">Contact</a><text>   </text><a href="javascript:void(0);" onclick="alert('Each article\'s copyright belongs to its respective author. For more information, contact Adelaide Hills Urbanism or the article\'s author.');">Copyright Information</a><br>
     </footer>
     <script src="js/script.js"></script>
     <script src="js/global.js"></script>
