--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <div class="top-header">
         <h1 class="left-text">Adelaide Hills Urbanism</h1>
         <div class="right-links">
-            <a href="github.com">About</a>
-            <a href="mailto:youremail@example.com">How To Contribute</a>
-            <a href="javascript:void(0);" onclick="alert('Each article\'s copyright belongs to its respective author. For more information, contact Adelaide Hills Urbanism or the article\'s author.');">GitHub</a>
+            <a href="https://github.com/JoshNewmann/adelaidehillsurbanism">About</a>
+            <a href="https://github.com/JoshNewmann/adelaidehillsurbanism">How To Contribute</a>
         </div>
     </div>
     <header>
@@ -24,7 +23,7 @@
     </main>
     <footer>
         <b>Adelaide Hills Urbanism, 2023</b><br>
-        <a href="github.com">Github</a><text>   </text><a href="mailto:email">Contact</a><text>   </text><a href="javascript:void(0);" onclick="alert('Each article\'s copyright belongs to its respective author. For more information, contact Adelaide Hills Urbanism or the article\'s author.');">Copyright Information</a><br>
+        <a href="https://github.com/JoshNewmann/adelaidehillsurbanism">Github</a><text>   </text><a href="mailto:Josh.Newman429@schools.sa.edu.au">Contact</a><text>   </text><a href="javascript:void(0);" onclick="alert('Each article\'s copyright belongs to its respective author. For more information, contact Adelaide Hills Urbanism or the article\'s author.');">Copyright Information</a><br>
     </footer>
     <script src="js/script.js"></script>
     <script src="js/global.js"></script>
